Moved libcstring macros to common

--- a/include/libvshadow/features.h.in
+++ b/include/libvshadow/features.h.in
@@ -24,7 +24,7 @@
 
 /* The libvshadow type support features
  */
-#if defined( HAVE_WIDE_CHARACTER_TYPE ) || @HAVE_WIDE_CHARACTER_TYPE@
+#if defined( WINAPI ) || @HAVE_WIDE_CHARACTER_TYPE@
 #define LIBVSHADOW_HAVE_WIDE_CHARACTER_TYPE	1
 #endif
 
@@ -46,5 +46,5 @@
 #endif
 #endif
 
-#endif
+#endif /* !defined( _LIBVSHADOW_FEATURES_H ) */
 
