--- a/libvshadow.ini
+++ b/libvshadow.ini
@@ -10,6 +10,7 @@ features: ["debug_output", "python", "dokan", "fuse"]
 
 [library]
 description: "Library to access the Windows NT Volume Shadow Snapshot (VSS) format"
+public_types: ["block", "store", "volume"]
 build_dependencies: []
 
 [tools]
