--- a/include/libvshadow/definitions.h.in
+++ b/include/libvshadow/definitions.h.in
@@ -59,5 +59,5 @@ enum LIBVSHADOW_BLOCK_FLAGS
 	LIBVSHADOW_BLOCK_FLAG_NOT_USED					= 0x00000004UL
 };
 
-#endif
+#endif /* !defined( _LIBVSHADOW_DEFINITIONS_H ) */
 
