--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -22,6 +22,7 @@ endif
 
 TESTS = \
 	test_api_functions.sh \
+	test_api_types.sh \
 	test_vshadowinfo.sh \
 	$(TESTS_PYVSHADOW)
 
@@ -31,6 +32,7 @@ check_SCRIPTS = \
 	pyvshadow_test_read.py \
 	pyvshadow_test_seek.py \
 	test_api_functions.sh \
+	test_api_types.sh \
 	test_python_functions.sh \
 	test_runner.sh \
 	test_vshadowinfo.sh
@@ -39,12 +41,26 @@ EXTRA_DIST = \
 	$(check_SCRIPTS)
 
 check_PROGRAMS = \
+	vshadow_test_block \
 	vshadow_test_error \
 	vshadow_test_notify \
-	vshadow_test_open_close \
 	vshadow_test_read \
 	vshadow_test_seek \
-	vshadow_test_support
+	vshadow_test_store \
+	vshadow_test_support \
+	vshadow_test_volume
+
+vshadow_test_block_SOURCES = \
+	vshadow_test_block.c \
+	vshadow_test_libcerror.h \
+	vshadow_test_libvshadow.h \
+	vshadow_test_macros.h \
+	vshadow_test_memory.c vshadow_test_memory.h \
+	vshadow_test_unused.h
+
+vshadow_test_block_LDADD = \
+	../libvshadow/libvshadow.la \
+	@LIBCERROR_LIBADD@
 
 vshadow_test_error_SOURCES = \
 	vshadow_test_error.c \
@@ -63,20 +79,6 @@ vshadow_test_notify_SOURCES = \
 
 vshadow_test_notify_LDADD = \
 	../libvshadow/libvshadow.la
-
-vshadow_test_open_close_SOURCES = \
-	vshadow_test_libcerror.h \
-	vshadow_test_libcsystem.h \
-	vshadow_test_libvshadow.h \
-	vshadow_test_open_close.c \
-	vshadow_test_unused.h
-
-vshadow_test_open_close_LDADD = \
-	@LIBCSYSTEM_LIBADD@ \
-	../libvshadow/libvshadow.la \
-	@LIBCTHREADS_LIBADD@ \
-	@LIBCERROR_LIBADD@
-	@PTHREAD_LIBADD@
 
 vshadow_test_read_SOURCES = \
 	vshadow_test_libcerror.h \
@@ -107,16 +109,56 @@ vshadow_test_seek_LDADD = \
 	@LIBCERROR_LIBADD@
 	@PTHREAD_LIBADD@
 
-vshadow_test_support_SOURCES = \
+vshadow_test_store_SOURCES = \
 	vshadow_test_libcerror.h \
 	vshadow_test_libvshadow.h \
 	vshadow_test_macros.h \
-	vshadow_test_support.c \
+	vshadow_test_memory.c vshadow_test_memory.h \
+	vshadow_test_store.c \
 	vshadow_test_unused.h
 
-vshadow_test_support_LDADD = \
+vshadow_test_store_LDADD = \
 	../libvshadow/libvshadow.la \
 	@LIBCERROR_LIBADD@
+
+vshadow_test_support_SOURCES = \
+	vshadow_test_libcerror.h \
+	vshadow_test_libclocale.h \
+	vshadow_test_libcsystem.h \
+	vshadow_test_libuna.h \
+	vshadow_test_libvshadow.h \
+	vshadow_test_macros.h \
+	vshadow_test_support.c
+
+vshadow_test_support_LDADD = \
+	@LIBCSYSTEM_LIBADD@ \
+	@LIBUNA_LIBADD@ \
+	@LIBCNOTIFY_LIBADD@ \
+	@LIBCLOCALE_LIBADD@ \
+	@LIBCDATA_LIBADD@ \
+	../libvshadow/libvshadow.la \
+	@LIBCERROR_LIBADD@
+
+vshadow_test_volume_SOURCES = \
+	vshadow_test_libcerror.h \
+	vshadow_test_libclocale.h \
+	vshadow_test_libcsystem.h \
+	vshadow_test_libuna.h \
+	vshadow_test_libvshadow.h \
+	vshadow_test_macros.h \
+	vshadow_test_memory.c vshadow_test_memory.h \
+	vshadow_test_volume.c
+
+vshadow_test_volume_LDADD = \
+	@LIBCSYSTEM_LIBADD@ \
+	@LIBUNA_LIBADD@ \
+	@LIBCNOTIFY_LIBADD@ \
+	@LIBCLOCALE_LIBADD@ \
+	@LIBCDATA_LIBADD@ \
+	../libvshadow/libvshadow.la \
+	@LIBCTHREADS_LIBADD@ \
+	@LIBCERROR_LIBADD@ \
+	@PTHREAD_LIBADD@
 
 MAINTAINERCLEANFILES = \
 	Makefile.in
