Worked on tests

--- a/.gitignore
+++ b/.gitignore
@@ -126,11 +126,16 @@ stamp-h[1-9]
 /tests/input
 /tests/tmp*
 /tests/vshadow_test_block
+/tests/vshadow_test_block_descriptor
+/tests/vshadow_test_block_range_descriptor
 /tests/vshadow_test_error
+/tests/vshadow_test_io_handle
 /tests/vshadow_test_notify
 /tests/vshadow_test_read
 /tests/vshadow_test_seek
 /tests/vshadow_test_store
+/tests/vshadow_test_store_block
+/tests/vshadow_test_store_descriptor
 /tests/vshadow_test_support
 /tests/vshadow_test_volume
 
