--- a/msvscpp/Makefile.am
+++ b/msvscpp/Makefile.am
@@ -16,11 +16,16 @@ MSVSCPP_FILES = \
 	libvshadow/libvshadow.vcproj \
 	pyvshadow/pyvshadow.vcproj \
 	vshadow_test_block/vshadow_test_block.vcproj \
+	vshadow_test_block_descriptor/vshadow_test_block_descriptor.vcproj \
+	vshadow_test_block_range_descriptor/vshadow_test_block_range_descriptor.vcproj \
 	vshadow_test_error/vshadow_test_error.vcproj \
+	vshadow_test_io_handle/vshadow_test_io_handle.vcproj \
 	vshadow_test_notify/vshadow_test_notify.vcproj \
 	vshadow_test_read/vshadow_test_read.vcproj \
 	vshadow_test_seek/vshadow_test_seek.vcproj \
 	vshadow_test_store/vshadow_test_store.vcproj \
+	vshadow_test_store_block/vshadow_test_store_block.vcproj \
+	vshadow_test_store_descriptor/vshadow_test_store_descriptor.vcproj \
 	vshadow_test_support/vshadow_test_support.vcproj \
 	vshadow_test_volume/vshadow_test_volume.vcproj \
 	vshadowinfo/vshadowinfo.vcproj \
