--- a/libvshadow.ini
+++ b/libvshadow.ini
@@ -3,7 +3,7 @@ name: "libvshadow"
 status: "alpha"
 authors: ["Joachim Metz <joachim.metz@gmail.com>"]
 year_of_creation: "2011"
-documentation_url: "https://googledrive.com/host/0B3fBvzttpiiSZDZXRFVMdnZCeHc/"
+documentation_url: "https://github.com/libyal/libvshadow/tree/master/documentation"
 download_url: "https://github.com/libyal/libvshadow/releases"
 git_url: "https://github.com/libyal/libvshadow.git"
 features: ["debug_output", "python", "dokan", "fuse"]
