Worked on tests

--- a/msvscpp/Makefile.am
+++ b/msvscpp/Makefile.am
@@ -18,6 +18,7 @@ MSVSCPP_FILES = \
 	vshadow_test_block/vshadow_test_block.vcproj \
 	vshadow_test_block_descriptor/vshadow_test_block_descriptor.vcproj \
 	vshadow_test_block_range_descriptor/vshadow_test_block_range_descriptor.vcproj \
+	vshadow_test_block_tree/vshadow_test_block_tree.vcproj \
 	vshadow_test_error/vshadow_test_error.vcproj \
 	vshadow_test_io_handle/vshadow_test_io_handle.vcproj \
 	vshadow_test_notify/vshadow_test_notify.vcproj \
@@ -28,6 +29,7 @@ MSVSCPP_FILES = \
 	vshadow_test_store_descriptor/vshadow_test_store_descriptor.vcproj \
 	vshadow_test_support/vshadow_test_support.vcproj \
 	vshadow_test_volume/vshadow_test_volume.vcproj \
+	vshadowdebug/vshadowdebug.vcproj \
 	vshadowinfo/vshadowinfo.vcproj \
 	vshadowmount/vshadowmount.vcproj \
 	libvshadow.sln
