--- a/.gitignore
+++ b/.gitignore
@@ -121,6 +121,7 @@ stamp-h[1-9]
 /libvshadow/libvshadow.rc
 /libvshadow/libvshadow_definitions.h
 /pyvshadow-python[23]/*.[ch]
+/vshadowtools/vshadowdebug
 /vshadowtools/vshadowinfo
 /vshadowtools/vshadowmount
 /tests/input
@@ -128,6 +129,7 @@ stamp-h[1-9]
 /tests/vshadow_test_block
 /tests/vshadow_test_block_descriptor
 /tests/vshadow_test_block_range_descriptor
+/tests/vshadow_test_block_tree
 /tests/vshadow_test_error
 /tests/vshadow_test_io_handle
 /tests/vshadow_test_notify
