--- a/libvshadow.spec.in
+++ b/libvshadow.spec.in
@@ -102,6 +102,9 @@ rm -rf %{buildroot}
 %{_libdir}/python3*/site-packages/*.la
 %{_libdir}/python3*/site-packages/*.so
 
+### Exclude debug tool ###
+%exclude %{_bindir}/vshadowdebug
+
 %changelog
 * @SPEC_DATE@ Joachim Metz <joachim.metz@gmail.com> @VERSION@-1
 - Auto-generated
