--- a/msvscpp/vshadowdebug/vshadowdebug.vcproj
+++ b/msvscpp/vshadowdebug/vshadowdebug.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="vshadow_test_store_block"
-	ProjectGUID="{11A98D18-621B-495A-9E30-27FE86F3476B}"
-	RootNamespace="vshadow_test_store_block"
+	Name="vshadowdebug"
+	ProjectGUID="{E92546B0-6A7B-423A-8E25-63ECBCDDB164}"
+	RootNamespace="vshadowdebug"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -41,8 +41,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcerror;..\..\libcthreads;..\..\libcdata;..\..\libclocale;..\..\libcnotify;..\..\libcsplit;..\..\libuna;..\..\libcfile;..\..\libcpath;..\..\libbfio;..\..\libcsystem"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBCTHREADS;HAVE_LOCAL_LIBCDATA;HAVE_LOCAL_LIBCLOCALE;HAVE_LOCAL_LIBCNOTIFY;HAVE_LOCAL_LIBCSPLIT;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBCFILE;HAVE_LOCAL_LIBCPATH;HAVE_LOCAL_LIBBFIO;HAVE_LOCAL_LIBCSYSTEM;LIBVSHADOW_DLL_IMPORT"
+				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcerror;..\..\libcthreads;..\..\libcdata;..\..\libclocale;..\..\libcnotify;..\..\libcsplit;..\..\libuna;..\..\libbfio;..\..\libfdatetime;..\..\libfguid;..\..\libcfile;..\..\libcpath;..\..\libcsystem"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBCTHREADS;HAVE_LOCAL_LIBCDATA;HAVE_LOCAL_LIBCLOCALE;HAVE_LOCAL_LIBCNOTIFY;HAVE_LOCAL_LIBCSPLIT;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBBFIO;HAVE_LOCAL_LIBFDATETIME;HAVE_LOCAL_LIBFGUID;HAVE_LOCAL_LIBCFILE;HAVE_LOCAL_LIBCPATH;HAVE_LOCAL_LIBCSYSTEM;LIBVSHADOW_DLL_IMPORT"
 				RuntimeLibrary="2"
 				WarningLevel="4"
 				CompileAs="1"
@@ -114,8 +114,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcerror;..\..\libcthreads;..\..\libcdata;..\..\libclocale;..\..\libcnotify;..\..\libcsplit;..\..\libuna;..\..\libcfile;..\..\libcpath;..\..\libbfio;..\..\libcsystem"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBCTHREADS;HAVE_LOCAL_LIBCDATA;HAVE_LOCAL_LIBCLOCALE;HAVE_LOCAL_LIBCNOTIFY;HAVE_LOCAL_LIBCSPLIT;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBCFILE;HAVE_LOCAL_LIBCPATH;HAVE_LOCAL_LIBBFIO;HAVE_LOCAL_LIBCSYSTEM;LIBVSHADOW_DLL_IMPORT"
+				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcerror;..\..\libcthreads;..\..\libcdata;..\..\libclocale;..\..\libcnotify;..\..\libcsplit;..\..\libuna;..\..\libbfio;..\..\libfdatetime;..\..\libfguid;..\..\libcfile;..\..\libcpath;..\..\libcsystem"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBCTHREADS;HAVE_LOCAL_LIBCDATA;HAVE_LOCAL_LIBCLOCALE;HAVE_LOCAL_LIBCNOTIFY;HAVE_LOCAL_LIBCSPLIT;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBBFIO;HAVE_LOCAL_LIBFDATETIME;HAVE_LOCAL_LIBFGUID;HAVE_LOCAL_LIBCFILE;HAVE_LOCAL_LIBCPATH;HAVE_LOCAL_LIBCSYSTEM;LIBVSHADOW_DLL_IMPORT"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="true"
 				RuntimeLibrary="3"
@@ -176,11 +176,15 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\tests\vshadow_test_memory.c"
+				RelativePath="..\..\vshadowtools\debug_handle.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\tests\vshadow_test_store_block.c"
+				RelativePath="..\..\vshadowtools\vshadowdebug.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\vshadowoutput.c"
 				>
 			</File>
 		</Filter>
@@ -190,27 +194,55 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\..\tests\vshadow_test_libbfio.h"
+				RelativePath="..\..\vshadowtools\debug_handle.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\tests\vshadow_test_libcerror.h"
+				RelativePath="..\..\vshadowtools\vshadowoutput.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\tests\vshadow_test_libvshadow.h"
+				RelativePath="..\..\vshadowtools\vshadowtools_libbfio.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\tests\vshadow_test_macros.h"
+				RelativePath="..\..\vshadowtools\vshadowtools_libcerror.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\tests\vshadow_test_memory.h"
+				RelativePath="..\..\vshadowtools\vshadowtools_libcfile.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\tests\vshadow_test_unused.h"
+				RelativePath="..\..\vshadowtools\vshadowtools_libclocale.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\vshadowtools_libcnotify.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\vshadowtools_libcpath.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\vshadowtools_libcsystem.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\vshadowtools_libfdatetime.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\vshadowtools_libfguid.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\vshadowtools_libuna.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\vshadowtools_libvshadow.h"
 				>
 			</File>
 		</Filter>
