Worked on tests and applied updates

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libvshadow],
- [20161225],
+ [20170214],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -93,8 +93,8 @@ AX_LIBFGUID_CHECK_ENABLE
 dnl Check for library function support
 AX_LIBVSHADOW_CHECK_LOCAL
 
-dnl Check for enabling libcsystem for cross-platform C generic system functions
-AX_LIBCSYSTEM_CHECK_ENABLE
+dnl Check for vshadowtools function support
+AX_VSHADOWTOOLS_CHECK_LOCAL
 
 dnl Check for libfuse Filesystem in Userspace (FUSE) support
 AX_LIBFUSE_CHECK_ENABLE
@@ -176,7 +176,7 @@ AS_IF(
  ])
 
 AS_IF(
- [test "x$ac_cv_libcsystem" = xyes || test "x$ac_cv_libfuse" != xno],
+ [test "x$ac_cv_libfuse" != xno],
  [AC_SUBST(
   [libvshadow_spec_tools_build_requires],
   [BuildRequires:])
@@ -214,7 +214,6 @@ AC_CONFIG_FILES([libbfio/Makefile])
 AC_CONFIG_FILES([libfdatetime/Makefile])
 AC_CONFIG_FILES([libfguid/Makefile])
 AC_CONFIG_FILES([libvshadow/Makefile])
-AC_CONFIG_FILES([libcsystem/Makefile])
 AC_CONFIG_FILES([vshadowtools/Makefile])
 AC_CONFIG_FILES([pyvshadow/Makefile])
 AC_CONFIG_FILES([pyvshadow-python2/Makefile])
@@ -257,7 +256,6 @@ Building:
    libbfio support:                              $ac_cv_libbfio
    libfdatetime support:                         $ac_cv_libfdatetime
    libfguid support:                             $ac_cv_libfguid
-   libcsystem support:                           $ac_cv_libcsystem
    FUSE support:                                 $ac_cv_libfuse
 
 Features:
