--- a/libvshadow.spec.in
+++ b/libvshadow.spec.in
@@ -24,8 +24,8 @@ Header files and libraries for developing applications for libvshadow.
 %package tools
 Summary: Several tools for reading Windows NT Volume Shadow Snapshots (VSS)
 Group: Applications/System
-Requires: libvshadow = %{version}-%{release} @ax_libcsystem_spec_requires@ @ax_libfuse_spec_requires@
-@libvshadow_spec_tools_build_requires@ @ax_libcsystem_spec_build_requires@ @ax_libfuse_spec_build_requires@
+Requires: libvshadow = %{version}-%{release} @ax_libfuse_spec_requires@
+@libvshadow_spec_tools_build_requires@ @ax_libfuse_spec_build_requires@
 
 %description tools
 Several tools for reading Windows NT Volume Shadow Snapshots (VSS)
