--- a/libvshadow.ini
+++ b/libvshadow.ini
@@ -14,6 +14,7 @@ public_types: ["block", "store", "volume"]
 build_dependencies: []
 
 [tools]
+description: "Several tools for reading Windows NT Volume Shadow Snapshots (VSS)"
 directory: "vshadowtools"
 names: ["vshadowinfo", "vshadowmount"]
 
