--- a/dpkg/control
+++ b/dpkg/control
@@ -1,10 +1,10 @@
 Source: libvshadow
-Section: libs
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
-Build-Depends: debhelper (>= 7), autotools-dev, libfuse-dev, python-all-dev, python3-all-dev
+Build-Depends: debhelper (>= 9), dh-autoreconf, pkg-config, python-dev, python3-dev
 Standards-Version: 3.9.5
-Homepage: https://github.com/libyal/libvshadow/
+Section: libs
+Homepage: https://github.com/libyal/libvshadow
 
 Package: libvshadow
 Architecture: any
@@ -33,6 +33,13 @@ Architecture: any
 Depends: libvshadow (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: Several tools for reading Windows NT Volume Shadow Snapshots (VSS)
  Several tools for reading Windows NT Volume Shadow Snapshots (VSS).
+
+Package: libvshadow-tools-dbg
+Section: debug
+Architecture: any
+Depends: libvshadow-tools (= ${binary:Version}), ${misc:Depends}
+Description: Debugging symbols for libvshadow-tools
+ Debugging symbols for libvshadow-tools.
 
 Package: libvshadow-python
 Section: python
