--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libvshadow],
- [20170918],
+ [20171007],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -116,7 +116,7 @@ AM_CONDITIONAL(
   HAVE_PYTHON_TESTS,
   [test "x${ac_cv_enable_python}" != xno || test "x${ac_cv_enable_python2}" != xno || test "x${ac_cv_enable_python3}" != xno])
 
-dnl Check for libfuse Filesystem in Userspace (FUSE) support
+dnl Check if libfuse or required headers and functions are available
 AX_LIBFUSE_CHECK_ENABLE
 
 dnl Check if vshadowtools required headers and functions are available
