--- a/libvshadow.spec.in
+++ b/libvshadow.spec.in
@@ -5,13 +5,13 @@ Summary: Library to access the Windows NT Volume Shadow Snapshot (VSS) format
 Group: System Environment/Libraries
 License: LGPL
 Source: %{name}-%{version}.tar.gz
-URL: https://github.com/libyal/libvshadow/
+URL: https://github.com/libyal/libvshadow
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 @libvshadow_spec_requires@ @ax_libbfio_spec_requires@ @ax_libcdata_spec_requires@ @ax_libcerror_spec_requires@ @ax_libcfile_spec_requires@ @ax_libclocale_spec_requires@ @ax_libcnotify_spec_requires@ @ax_libcpath_spec_requires@ @ax_libcsplit_spec_requires@ @ax_libcthreads_spec_requires@ @ax_libfdatetime_spec_requires@ @ax_libfguid_spec_requires@ @ax_libuna_spec_requires@
 @libvshadow_spec_build_requires@ @ax_libbfio_spec_build_requires@ @ax_libcdata_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcfile_spec_build_requires@ @ax_libclocale_spec_build_requires@ @ax_libcnotify_spec_build_requires@ @ax_libcpath_spec_build_requires@ @ax_libcsplit_spec_build_requires@ @ax_libcthreads_spec_build_requires@ @ax_libfdatetime_spec_build_requires@ @ax_libfguid_spec_build_requires@ @ax_libuna_spec_build_requires@
 
 %description
-libvshadow is a library to access the Windows NT Volume Shadow Snapshot (VSS) format
+Library to access the Windows NT Volume Shadow Snapshot (VSS) format
 
 %package devel
 Summary: Header files and libraries for developing applications for libvshadow
@@ -20,15 +20,6 @@ Requires: libvshadow = %{version}-%{release}
 
 %description devel
 Header files and libraries for developing applications for libvshadow.
-
-%package tools
-Summary: Several tools for reading Windows NT Volume Shadow Snapshots (VSS)
-Group: Applications/System
-Requires: libvshadow = %{version}-%{release} @ax_libfuse_spec_requires@
-@libvshadow_spec_tools_build_requires@ @ax_libfuse_spec_build_requires@
-
-%description tools
-Several tools for reading Windows NT Volume Shadow Snapshots (VSS)
 
 %package python
 Summary: Python 2 bindings for libvshadow
@@ -47,6 +38,15 @@ BuildRequires: python3-devel
 
 %description python3
 Python 3 bindings for libvshadow
+
+%package tools
+Summary: Several tools for reading Windows NT Volume Shadow Snapshots (VSS)
+Group: Applications/System
+Requires: libvshadow = %{version}-%{release} @ax_libfuse_spec_requires@
+@libvshadow_spec_tools_build_requires@ @ax_libfuse_spec_build_requires@
+
+%description tools
+Several tools for reading Windows NT Volume Shadow Snapshots (VSS)
 
 %prep
 %setup -q
@@ -81,13 +81,6 @@ rm -rf %{buildroot}
 %{_includedir}/*
 %{_mandir}/man3/*
 
-%files tools
-%defattr(644,root,root,755)
-%doc AUTHORS COPYING NEWS README
-%attr(755,root,root) %{_bindir}/vshadowinfo
-%attr(755,root,root) %{_bindir}/vshadowmount
-%{_mandir}/man1/*
-
 %files python
 %defattr(644,root,root,755)
 %doc AUTHORS COPYING NEWS README
@@ -102,9 +95,11 @@ rm -rf %{buildroot}
 %{_libdir}/python3*/site-packages/*.la
 %{_libdir}/python3*/site-packages/*.so
 
-### Exclude debug tool ###
-%exclude %{_bindir}/vshadowdebug
-
+%files tools
+%defattr(644,root,root,755)
+%doc AUTHORS COPYING NEWS README
+%attr(755,root,root) %{_bindir}/*
+%{_mandir}/man1/*
 %changelog
 * @SPEC_DATE@ Joachim Metz <joachim.metz@gmail.com> @VERSION@-1
 - Auto-generated
