--- a/appveyor.yml
+++ b/appveyor.yml
@@ -103,7 +103,7 @@ test_script:
 - ps: if ($env:TARGET -eq "vs2017") {
     .\runtests.ps1 }
 - cmd: if [%TARGET%]==[cygwin] (
-    C:\cygwin\bin\bash -e -l -c "cd libvshadow && ./runtests.sh" )
+    C:\cygwin\bin\bash -e -l -c "cd libvshadow && export CHECK_WITH_STRACE=1 && ./runtests.sh" )
 - cmd: if [%TARGET%]==[cygwin64] (
     C:\cygwin64\bin\bash -e -l -c "cd libvshadow && ./runtests.sh" )
 - cmd: if [%TARGET%]==[mingw] (
