--- a/msvscpp/vshadow_test_volume/vshadow_test_volume.vcproj
+++ b/msvscpp/vshadow_test_volume/vshadow_test_volume.vcproj
@@ -176,6 +176,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\..\tests\vshadow_test_functions.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\tests\vshadow_test_getopt.c"
 				>
 			</File>
@@ -193,6 +197,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\..\tests\vshadow_test_functions.h"
+				>
+			</File>
 			<File
 				RelativePath="..\..\tests\vshadow_test_getopt.h"
 				>
@@ -227,6 +235,10 @@
 			</File>
 			<File
 				RelativePath="..\..\tests\vshadow_test_memory.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\tests\vshadow_test_unused.h"
 				>
 			</File>
 		</Filter>
