--- a/libvshadow.ini
+++ b/libvshadow.ini
@@ -1,4 +1,5 @@
 [project]
+description: "libvshadow is a library to access the Volume Shadow Snapshot (VSS) format."
 name: "libvshadow"
 status: "alpha"
 year_of_creation: "2011"
