--- a/msvscpp/vshadow_test_support/vshadow_test_support.vcproj
+++ b/msvscpp/vshadow_test_support/vshadow_test_support.vcproj
@@ -184,6 +184,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\tests\vshadow_test_memory.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\tests\vshadow_test_support.c"
 				>
 			</File>
@@ -227,6 +231,10 @@
 			</File>
 			<File
 				RelativePath="..\..\tests\vshadow_test_macros.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\tests\vshadow_test_memory.h"
 				>
 			</File>
 			<File
