--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libvshadow],
- [20180403],
+ [20180822],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -100,10 +100,7 @@ dnl Check if libvshadow required headers and functions are available
 AX_LIBVSHADOW_CHECK_LOCAL
 
 dnl Check if libvshadow Python bindings (pyvshadow) required headers and functions are available
-AX_PYTHON_CHECK_PYPREFIX
 AX_PYTHON_CHECK_ENABLE
-AX_PYTHON2_CHECK_ENABLE
-AX_PYTHON3_CHECK_ENABLE
 
 AS_IF(
   [test "x${ac_cv_enable_python}" != xno || test "x${ac_cv_enable_python2}" != xno || test "x${ac_cv_enable_python3}" != xno],
@@ -117,10 +114,6 @@ AS_IF(
       [1])
     ])
   ])
-
-AM_CONDITIONAL(
-  HAVE_PYTHON_TESTS,
-  [test "x${ac_cv_enable_python}" != xno || test "x${ac_cv_enable_python2}" != xno || test "x${ac_cv_enable_python3}" != xno])
 
 dnl Check if libfuse or required headers and functions are available
 AX_LIBFUSE_CHECK_ENABLE
@@ -136,7 +129,7 @@ AS_IF(
  [test "x$enable_shared" = xyes],
  [AS_CASE(
   [$host],
-  [*cygwin* | *mingw*],
+  [*cygwin* | *mingw* | *msys*],
   [AC_DEFINE(
    [HAVE_DLLMAIN],
    [1],
@@ -145,7 +138,10 @@ AS_IF(
    [HAVE_DLLMAIN],
    [1])
 
-  dnl Used in tests
+  AC_SUBST(
+   [LIBVSHADOW_DLL_EXPORT],
+   ["-DLIBVSHADOW_DLL_EXPORT"])
+
   AC_SUBST(
    [LIBVSHADOW_DLL_IMPORT],
    ["-DLIBVSHADOW_DLL_IMPORT"])
@@ -248,8 +244,6 @@ Features:
    Wide character type support:                  $ac_cv_enable_wide_character_type
    vshadowtools are build as static executables: $ac_cv_enable_static_executables
    Python (pyvshadow) support:                   $ac_cv_enable_python
-   Python version 2 (pyvshadow) support:         $ac_cv_enable_python2
-   Python version 3 (pyvshadow) support:         $ac_cv_enable_python3
    Verbose output:                               $ac_cv_enable_verbose_output
    Debug output:                                 $ac_cv_enable_debug_output
 ]);
