--- a/libvshadow/Makefile.am
+++ b/libvshadow/Makefile.am
@@ -13,7 +13,8 @@ AM_CPPFLAGS = \
 	@LIBBFIO_CPPFLAGS@ \
 	@LIBFDATETIME_CPPFLAGS@ \
 	@LIBFGUID_CPPFLAGS@ \
-	@PTHREAD_CPPFLAGS@
+	@PTHREAD_CPPFLAGS@ \
+	@LIBVSHADOW_DLL_EXPORT@
 
 lib_LTLIBRARIES = libvshadow.la
 
