--- a/pyvshadow-python2/Makefile.am
+++ b/pyvshadow-python2/Makefile.am
@@ -16,7 +16,8 @@ AM_CFLAGS = \
 	@LIBCFILE_CPPFLAGS@ \
 	@LIBCPATH_CPPFLAGS@ \
 	@LIBBFIO_CPPFLAGS@ \
-	@LIBFGUID_CPPFLAGS@
+	@LIBFGUID_CPPFLAGS@ \
+	@LIBVSHADOW_DLL_IMPORT@
 
 am_pyvshadow_la_rpath = -rpath $(pyexecdir2)
 
