--- a/include/libvshadow.h.in
+++ b/include/libvshadow.h.in
@@ -247,6 +247,10 @@ LIBVSHADOW_EXTERN \
 int libvshadow_volume_open_file_io_handle(
      libvshadow_volume_t *volume,
      libbfio_handle_t *file_io_handle,
+     libvshadow_volume_t *catalog_volume,
+     libbfio_handle_t *catalog_file_io_handle,
+     libvshadow_volume_t *store_volume,
+     libbfio_handle_t *store_file_io_handle,
      int access_flags,
      libvshadow_error_t **error );
 
