--- a/msvscpp/vshadowmount/vshadowmount.vcproj
+++ b/msvscpp/vshadowmount/vshadowmount.vcproj
@@ -58,6 +58,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="..\..\..\dokan\msvscpp\$(ConfigurationName)\dokan.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;"
 				SubSystem="1"
@@ -134,6 +135,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="..\..\..\dokan\msvscpp\$(ConfigurationName)\dokan.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;"
 				GenerateDebugInformation="true"
@@ -176,6 +178,22 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\..\vshadowtools\mount_dokan.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\mount_file_entry.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\mount_file_system.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\mount_fuse.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\vshadowtools\mount_handle.c"
 				>
 			</File>
@@ -202,6 +220,22 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath="..\..\vshadowtools\mount_dokan.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\mount_file_entry.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\mount_file_system.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\mount_fuse.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\vshadowtools\mount_handle.h"
 				>
 			</File>
@@ -215,6 +249,10 @@
 			</File>
 			<File
 				RelativePath="..\..\vshadowtools\vshadowtools_libbfio.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\vshadowtools\vshadowtools_libcdata.h"
 				>
 			</File>
 			<File
