--- a/libvshadow.ini
+++ b/libvshadow.ini
@@ -19,6 +19,7 @@ names: ["vshadowdebug", "vshadowinfo", "vshadowmount"]
 features: ["offset"]
 base_type: "volume"
 file_entry_type: "store"
+file_system_type: "volume"
 mounted_description: "a device file that provides the RAW volume data contained in the VSS volume"
 path_prefix: "lvm"
 source: "image.raw"
