Applied updates and worked on format support

--- a/libvshadow.ini
+++ b/libvshadow.ini
@@ -36,6 +36,8 @@ example: "vshadowinfo image.raw"
 
 [tests]
 profiles: ["libvshadow", "pyvshadow", "vshadowinfo"]
+option_sets: ["offset"]
+info_tool_option_sets: ["offset"]
 info_tool_options_per_profile: ["-a"]
 info_tool_profiles: ["vshadowinfo"]
 example_filename1: "image1.raw"
