--- a/libvshadow/libvshadow_definitions.h.in
+++ b/libvshadow/libvshadow_definitions.h.in
@@ -72,7 +72,7 @@ enum LIBVSHADOW_BLOCK_FLAGS
 	LIBVSHADOW_BLOCK_FLAG_NOT_USED					= 0x00000004UL
 };
 
-#endif
+#endif /* !defined( HAVE_LOCAL_LIBVSHADOW ) */
 
 /* The record types
  */
@@ -111,5 +111,5 @@ enum LIBVSHADOW_RECORD_TYPES
  */
 #define LIBVSHADOW_BLOCK_DESCRIPTORS_TREE_MAXIMUM_NUMBER_OF_SUB_NODES	257
 
-#endif
+#endif /* !defined( _LIBVSHADOW_INTERNAL_DEFINITIONS_H ) */
 
