--- a/libvshadow/libvshadow_definitions.h.in
+++ b/libvshadow/libvshadow_definitions.h.in
@@ -111,5 +111,7 @@ enum LIBVSHADOW_RECORD_TYPES
  */
 #define LIBVSHADOW_BLOCK_DESCRIPTORS_TREE_MAXIMUM_NUMBER_OF_SUB_NODES	257
 
+#define LIBVSHADOW_BLOCK_TREE_NUMBER_OF_SUB_NODES			256
+
 #endif /* !defined( _LIBVSHADOW_INTERNAL_DEFINITIONS_H ) */
 
