--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,7 @@ stamp-h[1-9]
 /tests/vshadow_test_block_descriptor
 /tests/vshadow_test_block_range_descriptor
 /tests/vshadow_test_block_tree
+/tests/vshadow_test_block_tree_node
 /tests/vshadow_test_error
 /tests/vshadow_test_io_handle
 /tests/vshadow_test_notify
