--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Files to ignore by git
 #
-# Version: 20230405
+# Version: 20230926
 
 # Generic auto-generated build files
 *~
@@ -25,10 +25,13 @@
 *.swp
 *.Tpo
 *.trs
+*.whl
 /*.egg-info/
+__pycache__
 .deps
 .dirstamp
 .libs
+.tox
 INSTALL
 Makefile
 Makefile.bcc
@@ -125,6 +128,7 @@ stamp-h[1-9]
 /libvshadow/libvshadow.rc
 /libvshadow/libvshadow_definitions.h
 /pyvshadow-python[23]/*.[ch]
+/setup.cfg
 /vshadowtools/*.exe
 /vshadowtools/vshadowdebug
 /vshadowtools/vshadowinfo
