--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ([2.71])
 
 AC_INIT(
  [libvshadow],
- [20230918],
+ [20231014],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -201,6 +201,7 @@ AC_CONFIG_FILES([dpkg/changelog])
 AC_CONFIG_FILES([libvshadow/libvshadow.rc])
 AC_CONFIG_FILES([libvshadow.pc])
 AC_CONFIG_FILES([libvshadow.spec])
+AC_CONFIG_FILES([setup.cfg])
 dnl Generate a source configuration file
 AC_CONFIG_HEADERS([common/config.h])
 
